--- a/src/components/Chapter.astro
+++ b/src/components/Chapter.astro
@@ -1,5 +1,5 @@
 ---
-import { categories } from '../data/categories';
+import { getCategoryNameFromIds } from '../utils/categoryUtils';
 import { calculateReadingTimeFromMarkdown } from '../utils/readingTime';
 import { formatRelativeReadTimeShort } from '../utils/relativeReadTime.client';
 
@@ -11,13 +11,6 @@ export interface Props {
 }
 
 const { posts, chapterTitle, chapterId, defaultExpanded = true } = Astro.props;
-
-// Helper function to get category name
-function getCategoryName(categoryIds: string[] | undefined): string | null {
-  if (!categoryIds || categoryIds.length === 0) return null;
-  const category = categories.find((cat) => cat.id === categoryIds[0]);
-  return category ? category.name : categoryIds[0];
-}
 
 ---
 
@@ -56,7 +49,7 @@ function getCategoryName(categoryIds: string[] | undefined): string | null {
       posts.length > 0 ? (
         <ol class="post-list">
           {posts.map((post, index) => {
-            const categoryName = getCategoryName(post.data.category);
+            const categoryName = getCategoryNameFromIds(post.data.category);
             return (
               <li class="post-item">
                 <a href={`/p/${post.id}`} class="post-link" data-post-slug={post.id}>
